# PnLCalculator

./: CMakeLists.txt
PnLCalculator/: CMakeLists.txt  PnLCalculator.cpp  PnLCalculator.h
PnLCalculator/include/: Event.hpp  PnLCalculator.hpp  Trade.hpp
PnLCalculator/src/: PnLCalculator.cpp  main.cpp
PnLCalculator/test/: baseTest.csv
PnLCalculator/tests/: testPnlCalculator.cpp
